# mywallpaper-addon-system-monitor

./: .gitignore  LICENSE  README.md  index.html  index.js  manifest.json  mywallpaper.config.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish-native.yml  publish.yml
assets/: thumbnail.source.html
native/companion/: Cargo.toml
native/companion/src/: main.rs
src/: index.tsx  main.ts  mywallpaper.d.ts  styles.css
