[package]
name = "mywallpaper-system-monitor-companion"
version = "2.0.1"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Performance",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }
